--- a/rally_config.yml
+++ b/rally_config.yml
@@ -1,13 +1,12 @@
 rally:
   uri: rally1.rallydev.com
   apikey: _qy1urW6ySCCCwGTvKjeiYFZbSBl0UQ2g2TQ51KQQEU
-  #proxy: proxyvipecc.nb.ford.com:83
-  proxy:
-  project: Consumer Relationship
+  proxy: proxyvipecc.nb.ford.com:83
+  project: Assist
   workspace: Ford
   board:
     cycleTime:
-      startState: In-Progress
+      startState: In Progress
       endState: Deployed
     story:
       creationDate: 2019-05-01
