Added command line arguments for report start and end date

--- a/rally_config.yml
+++ b/rally_config.yml
@@ -3,12 +3,12 @@ rally:
   apikey: _qy1urW6ySCCCwGTvKjeiYFZbSBl0UQ2g2TQ51KQQEU
   #proxy: proxyvipecc.nb.ford.com:83
   proxy:
-  project: Assist
+  project: Owner Services
   workspace: Ford
   board:
     cycleTime:
-      startState: In Progress
-      endState: Deployed
+      startState: In-Progress
+      endState: Done
     story:
       creationDate: 2019-07-01
 
